--- a/index.html
+++ b/index.html
@@ -9,62 +9,49 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!--link to custom stylesheet-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!--link to javascript file-->
+    <script src="assets/javascript/game.js"></script>
 
     <title>Hangman</title>
 </head>
 <body>
-    
-    <h1>Hangman Game</h1>
 
-    <div class="row">
-
-        <div class="col-sm-12">
-            <div>
-                <span id="ltr0"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr1"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr2"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr3"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr4"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr5"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr6"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr7"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr8"></span>
-                <span>________</span>
-            </div>
-            <div>
-                <span id="ltr9"></span>
-                <span>________</span>
-            </div>
-        </div>
+    <div class="jumbotron">    
+        <h1 class="text-center">Hangman Game</h1>
     </div>
 
-    <script src="assets/javascript/game.js"></script>
+        <div class="row">
+
+            <div class="col-sm-2">
+
+                <aside>
+                    <h2>Scoreboard</h2>
+                        <p>Games Played:<span id="gmsPlayed">0</span></p>
+                        <p>Wins:<span id="gmsWon">0</span></p>
+                        <p>Losses:<span id="gmsLost">0</span></p>
+                        <p>Guess Count:<span id="gsCount">10</span></p>
+                </aside>
+
+            </div>
+
+            <div class="col-sm-5">
+                <img src="http://via.placeholder.com/350x450" alt="Hangman Image">
+            </div>
+            <div class="col-sm-5">
+                <img src="http://via.placeholder.com/250x250" alt="Guessed Character Image">
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-sm-12 text-center" id="displayWord">
+            </div>
+        </div>
+
+    <!--link to custom stylesheet-->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 
 </body>
 </html>
