--- a/index.html
+++ b/index.html
@@ -9,37 +9,50 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <!--link to custom stylesheet-->
+    <link rel="stylesheet" typ ="text/css" href="assets/css/style.css">
+
     <!--link to javascript file-->
     <script src="assets/javascript/game.js"></script>
 
     <title>Hangman</title>
 </head>
-<body>
 
-    <div class="jumbotron">    
-        <h1 class="text-center">Hangman Game</h1>
+<body id="backGround">
+
+    <div class="container">
+        <aside id="scoreBoard">
+            <h2>Scoreboard</h2>
+                <p>Games Played:<span id="gmsPlayed">0</span></p>
+                <p>Wins:<span id="gmsWon">0</span></p>
+                <p>Losses:<span id="gmsLost">0</span></p>
+                <p>Guess Count:<span id="gsCount">10</span></p>
+        </aside>
+
+        <div id="titleBar">    
+            <h1 class="text-center" id="tbh1">Hangman Game</h1>
+        </div>
     </div>
+
+    <div class="container">
 
         <div class="row">
 
-            <div class="col-sm-2">
+            <div class="col-sm-3">
 
-                <aside>
-                    <h2>Scoreboard</h2>
-                        <p>Games Played:<span id="gmsPlayed">0</span></p>
-                        <p>Wins:<span id="gmsWon">0</span></p>
-                        <p>Losses:<span id="gmsLost">0</span></p>
-                        <p>Guess Count:<span id="gsCount">10</span></p>
-                </aside>
+                    <div id="ltrsGuessed">
+                        <p>Letters Guessed:</p>
+                        <span id="ltrG"></span>
+                    </div>
 
             </div>
 
-            <div class="col-sm-5">
-                <img src="http://via.placeholder.com/350x450" alt="Hangman Image">
+            <div class="col-sm-6">
+
+                <img src="assets/images/guesswho.png"
             </div>
-            <div class="col-sm-5">
-                <img src="http://via.placeholder.com/250x250" alt="Guessed Character Image">
-            </div>
+
+            <div class="col-sm-3"></div>
 
         </div>
 
@@ -49,8 +62,7 @@
             </div>
         </div>
 
-    <!--link to custom stylesheet-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    </div>
 
 
 </body>
