--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </aside>
 
         <div id="titleBar">    
-            <h1 class="text-center" id="tbh1">Hangman Game</h1>
+            <h1 class="text-center" id="tbh1">Hangman</h1>
         </div>
     </div>
 
@@ -49,7 +49,7 @@
 
             <div class="col-sm-6">
 
-                <img src="assets/images/guesswho.png"
+                <img id="charImage" src="assets/images/guesswho.png">
             </div>
 
             <div class="col-sm-3"></div>
