--- a/index.html
+++ b/index.html
@@ -19,47 +19,50 @@
 </head>
 
 <body id="backGround">
-
-    <div class="container">
-        <aside id="scoreBoard">
-            <h2>Scoreboard</h2>
-                <p>Games Played:<span id="gmsPlayed">0</span></p>
-                <p>Wins:<span id="gmsWon">0</span></p>
-                <p>Losses:<span id="gmsLost">0</span></p>
-                <p>Guess Count:<span id="gsCount">10</span></p>
-        </aside>
-
+        
         <div id="titleBar">    
             <h1 class="text-center" id="tbh1">Hangman</h1>
         </div>
-    </div>
 
-    <div class="container">
+    <div class="container-fluid" id="gmcontainer">
 
-        <div class="row">
+        <div class="row" id="row-first">
 
-            <div class="col-sm-3">
+            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-4">
 
-                    <div id="ltrsGuessed">
-                        <p>Letters Guessed:</p>
-                        <span id="ltrG"></span>
-                    </div>
+                    <aside id="scoreBoard">
+                        <h2 id="scb">Scoreboard</h2>
+                            <p class="pfont">Games Played:<span id="gmsPlayed">0</span></p>
+                            <p class ="pfont">Wins:<span id="gmsWon">0</span></p>
+                            <p class="pfont">Losses:<span id="gmsLost">0</span></p>
+                            <p class="pfont">Guess Count:<span id="gsCount">10</span></p>
+                    </aside>
 
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-lg-6 col-md-6 col-sm-7 col-xs-8">
 
-                <img id="charImage" src="assets/images/guesswho.png">
+                <img class="image-responsive" id="charImage" src="assets/images/guesswho.png">
+
             </div>
 
-            <div class="col-sm-3"></div>
+            <div class="col-lg-3 col-md-2 col-sm-1 col-xs-0"></div>
 
         </div>
 
-        <div class="row">
+        <div class="row" id="row-second">
+            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-4">
 
-            <div class="col-sm-12 text-center" id="displayWord">
+                <div id="ltrsGuessed">
+                    <p class="text-left" id="pltrG">Letters Guessed:</p>
+                    <span id="ltrG" class="text-left"></span>
+                </div>
+
             </div>
+
+            <div class=" col-lg-6 col-md-6 col-sm-7 col-xs-8 text-center" id="displayWord"></div>
+
+            <div class="col-lg-3 col-md-2 col-sm-1 col-xs-0"></div>
         </div>
 
     </div>
