--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <!-- add link to fonts library -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/waltograph" type="text/css">
+
     <!--link to custom stylesheet-->
     <link rel="stylesheet" typ ="text/css" href="assets/css/style.css">
 
